parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COMADOS
    DIFERENTE
    IGUAL
    LLLA
    MAYORDER
    MAYORIGUAL
    MAYORIZQ
    MAYORQUE
    MENORIGUAL
    MENORQUE
    MIENTRAS
    NOT
    NUMERAL
    OR
    PARA
    RLLA
    SI
    SINO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR END PUNTOCOMA
Rule 2     cuerpo -> declaraciones
Rule 3     declaraciones -> declaraciones declaracion
Rule 4     declaraciones -> declaracion
Rule 5     declaracion -> tipo lista_identificadores PUNTOCOMA
Rule 6     declaracion -> asignacion PUNTOCOMA
Rule 7     declaracion -> lectura PUNTOCOMA
Rule 8     declaracion -> escritura PUNTOCOMA
Rule 9     tipo -> INT
Rule 10    lista_identificadores -> IDENTIFICADOR
Rule 11    lista_identificadores -> lista_identificadores COMA IDENTIFICADOR
Rule 12    asignacion -> VARIABLE ASIGNAR expresion
Rule 13    lectura -> READ VARIABLE
Rule 14    escritura -> PRINTF LPAR CADENA RPAR
Rule 15    escritura -> PRINTF LPAR CADENA COMA VARIABLE RPAR
Rule 16    expresion -> expresion SUMA termino
Rule 17    expresion -> expresion RESTA termino
Rule 18    expresion -> termino
Rule 19    termino -> termino MULT factor
Rule 20    termino -> termino DIV factor
Rule 21    termino -> factor
Rule 22    factor -> ENTERO
Rule 23    factor -> VARIABLE
Rule 24    factor -> LPAR expresion RPAR
Rule 25    factor -> CADENA

Terminals, with rules where they appear

AND                  : 
ASIGNAR              : 12
CADENA               : 14 15 25
COMA                 : 11 15
COMADOS              : 
DIFERENTE            : 
DIV                  : 20
END                  : 1
ENTERO               : 22
IDENTIFICADOR        : 1 10 11
IGUAL                : 
INT                  : 9
LCOR                 : 1
LLLA                 : 
LPAR                 : 1 14 15 24
MAYORDER             : 
MAYORIGUAL           : 
MAYORIZQ             : 
MAYORQUE             : 
MENORIGUAL           : 
MENORQUE             : 
MIENTRAS             : 
MULT                 : 19
NOT                  : 
NUMERAL              : 
OR                   : 
PARA                 : 
PRINTF               : 14 15
PROGRAMA             : 1
PUNTOCOMA            : 1 5 6 7 8
RCOR                 : 1
READ                 : 13
RESTA                : 17
RLLA                 : 
RPAR                 : 1 14 15 24
SI                   : 
SINO                 : 
SUMA                 : 16
VARIABLE             : 12 13 15 23
error                : 

Nonterminals, with rules where they appear

asignacion           : 6
cuerpo               : 1
declaracion          : 3 4
declaraciones        : 2 3
escritura            : 8
expresion            : 12 16 17 24
factor               : 19 20 21
lectura              : 7
lista_identificadores : 5 11
programa             : 0
termino              : 16 17 18 19 20
tipo                 : 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR END PUNTOCOMA

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR END PUNTOCOMA

    IDENTIFICADOR   shift and go to state 3


state 3

    (1) programa -> PROGRAMA IDENTIFICADOR . LPAR RPAR LCOR cuerpo RCOR END PUNTOCOMA

    LPAR            shift and go to state 4


state 4

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR . RPAR LCOR cuerpo RCOR END PUNTOCOMA

    RPAR            shift and go to state 5


state 5

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR RPAR . LCOR cuerpo RCOR END PUNTOCOMA

    LCOR            shift and go to state 6


state 6

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR . cuerpo RCOR END PUNTOCOMA
    (2) cuerpo -> . declaraciones
    (3) declaraciones -> . declaraciones declaracion
    (4) declaraciones -> . declaracion
    (5) declaracion -> . tipo lista_identificadores PUNTOCOMA
    (6) declaracion -> . asignacion PUNTOCOMA
    (7) declaracion -> . lectura PUNTOCOMA
    (8) declaracion -> . escritura PUNTOCOMA
    (9) tipo -> . INT
    (12) asignacion -> . VARIABLE ASIGNAR expresion
    (13) lectura -> . READ VARIABLE
    (14) escritura -> . PRINTF LPAR CADENA RPAR
    (15) escritura -> . PRINTF LPAR CADENA COMA VARIABLE RPAR

    INT             shift and go to state 14
    VARIABLE        shift and go to state 15
    READ            shift and go to state 16
    PRINTF          shift and go to state 17

    cuerpo                         shift and go to state 7
    declaraciones                  shift and go to state 8
    declaracion                    shift and go to state 9
    tipo                           shift and go to state 10
    asignacion                     shift and go to state 11
    lectura                        shift and go to state 12
    escritura                      shift and go to state 13

state 7

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo . RCOR END PUNTOCOMA

    RCOR            shift and go to state 18


state 8

    (2) cuerpo -> declaraciones .
    (3) declaraciones -> declaraciones . declaracion
    (5) declaracion -> . tipo lista_identificadores PUNTOCOMA
    (6) declaracion -> . asignacion PUNTOCOMA
    (7) declaracion -> . lectura PUNTOCOMA
    (8) declaracion -> . escritura PUNTOCOMA
    (9) tipo -> . INT
    (12) asignacion -> . VARIABLE ASIGNAR expresion
    (13) lectura -> . READ VARIABLE
    (14) escritura -> . PRINTF LPAR CADENA RPAR
    (15) escritura -> . PRINTF LPAR CADENA COMA VARIABLE RPAR

    RCOR            reduce using rule 2 (cuerpo -> declaraciones .)
    INT             shift and go to state 14
    VARIABLE        shift and go to state 15
    READ            shift and go to state 16
    PRINTF          shift and go to state 17

    declaracion                    shift and go to state 19
    tipo                           shift and go to state 10
    asignacion                     shift and go to state 11
    lectura                        shift and go to state 12
    escritura                      shift and go to state 13

state 9

    (4) declaraciones -> declaracion .

    INT             reduce using rule 4 (declaraciones -> declaracion .)
    VARIABLE        reduce using rule 4 (declaraciones -> declaracion .)
    READ            reduce using rule 4 (declaraciones -> declaracion .)
    PRINTF          reduce using rule 4 (declaraciones -> declaracion .)
    RCOR            reduce using rule 4 (declaraciones -> declaracion .)


state 10

    (5) declaracion -> tipo . lista_identificadores PUNTOCOMA
    (10) lista_identificadores -> . IDENTIFICADOR
    (11) lista_identificadores -> . lista_identificadores COMA IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 21

    lista_identificadores          shift and go to state 20

state 11

    (6) declaracion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 22


state 12

    (7) declaracion -> lectura . PUNTOCOMA

    PUNTOCOMA       shift and go to state 23


state 13

    (8) declaracion -> escritura . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24


state 14

    (9) tipo -> INT .

    IDENTIFICADOR   reduce using rule 9 (tipo -> INT .)


state 15

    (12) asignacion -> VARIABLE . ASIGNAR expresion

    ASIGNAR         shift and go to state 25


state 16

    (13) lectura -> READ . VARIABLE

    VARIABLE        shift and go to state 26


state 17

    (14) escritura -> PRINTF . LPAR CADENA RPAR
    (15) escritura -> PRINTF . LPAR CADENA COMA VARIABLE RPAR

    LPAR            shift and go to state 27


state 18

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR . END PUNTOCOMA

    END             shift and go to state 28


state 19

    (3) declaraciones -> declaraciones declaracion .

    INT             reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    VARIABLE        reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    READ            reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    PRINTF          reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    RCOR            reduce using rule 3 (declaraciones -> declaraciones declaracion .)


state 20

    (5) declaracion -> tipo lista_identificadores . PUNTOCOMA
    (11) lista_identificadores -> lista_identificadores . COMA IDENTIFICADOR

    PUNTOCOMA       shift and go to state 29
    COMA            shift and go to state 30


state 21

    (10) lista_identificadores -> IDENTIFICADOR .

    PUNTOCOMA       reduce using rule 10 (lista_identificadores -> IDENTIFICADOR .)
    COMA            reduce using rule 10 (lista_identificadores -> IDENTIFICADOR .)


state 22

    (6) declaracion -> asignacion PUNTOCOMA .

    INT             reduce using rule 6 (declaracion -> asignacion PUNTOCOMA .)
    VARIABLE        reduce using rule 6 (declaracion -> asignacion PUNTOCOMA .)
    READ            reduce using rule 6 (declaracion -> asignacion PUNTOCOMA .)
    PRINTF          reduce using rule 6 (declaracion -> asignacion PUNTOCOMA .)
    RCOR            reduce using rule 6 (declaracion -> asignacion PUNTOCOMA .)


state 23

    (7) declaracion -> lectura PUNTOCOMA .

    INT             reduce using rule 7 (declaracion -> lectura PUNTOCOMA .)
    VARIABLE        reduce using rule 7 (declaracion -> lectura PUNTOCOMA .)
    READ            reduce using rule 7 (declaracion -> lectura PUNTOCOMA .)
    PRINTF          reduce using rule 7 (declaracion -> lectura PUNTOCOMA .)
    RCOR            reduce using rule 7 (declaracion -> lectura PUNTOCOMA .)


state 24

    (8) declaracion -> escritura PUNTOCOMA .

    INT             reduce using rule 8 (declaracion -> escritura PUNTOCOMA .)
    VARIABLE        reduce using rule 8 (declaracion -> escritura PUNTOCOMA .)
    READ            reduce using rule 8 (declaracion -> escritura PUNTOCOMA .)
    PRINTF          reduce using rule 8 (declaracion -> escritura PUNTOCOMA .)
    RCOR            reduce using rule 8 (declaracion -> escritura PUNTOCOMA .)


state 25

    (12) asignacion -> VARIABLE ASIGNAR . expresion
    (16) expresion -> . expresion SUMA termino
    (17) expresion -> . expresion RESTA termino
    (18) expresion -> . termino
    (19) termino -> . termino MULT factor
    (20) termino -> . termino DIV factor
    (21) termino -> . factor
    (22) factor -> . ENTERO
    (23) factor -> . VARIABLE
    (24) factor -> . LPAR expresion RPAR
    (25) factor -> . CADENA

    ENTERO          shift and go to state 35
    VARIABLE        shift and go to state 31
    LPAR            shift and go to state 36
    CADENA          shift and go to state 37

    expresion                      shift and go to state 32
    termino                        shift and go to state 33
    factor                         shift and go to state 34

state 26

    (13) lectura -> READ VARIABLE .

    PUNTOCOMA       reduce using rule 13 (lectura -> READ VARIABLE .)


state 27

    (14) escritura -> PRINTF LPAR . CADENA RPAR
    (15) escritura -> PRINTF LPAR . CADENA COMA VARIABLE RPAR

    CADENA          shift and go to state 38


state 28

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR END . PUNTOCOMA

    PUNTOCOMA       shift and go to state 39


state 29

    (5) declaracion -> tipo lista_identificadores PUNTOCOMA .

    INT             reduce using rule 5 (declaracion -> tipo lista_identificadores PUNTOCOMA .)
    VARIABLE        reduce using rule 5 (declaracion -> tipo lista_identificadores PUNTOCOMA .)
    READ            reduce using rule 5 (declaracion -> tipo lista_identificadores PUNTOCOMA .)
    PRINTF          reduce using rule 5 (declaracion -> tipo lista_identificadores PUNTOCOMA .)
    RCOR            reduce using rule 5 (declaracion -> tipo lista_identificadores PUNTOCOMA .)


state 30

    (11) lista_identificadores -> lista_identificadores COMA . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 40


state 31

    (23) factor -> VARIABLE .

    MULT            reduce using rule 23 (factor -> VARIABLE .)
    DIV             reduce using rule 23 (factor -> VARIABLE .)
    SUMA            reduce using rule 23 (factor -> VARIABLE .)
    RESTA           reduce using rule 23 (factor -> VARIABLE .)
    PUNTOCOMA       reduce using rule 23 (factor -> VARIABLE .)
    RPAR            reduce using rule 23 (factor -> VARIABLE .)


state 32

    (12) asignacion -> VARIABLE ASIGNAR expresion .
    (16) expresion -> expresion . SUMA termino
    (17) expresion -> expresion . RESTA termino

    PUNTOCOMA       reduce using rule 12 (asignacion -> VARIABLE ASIGNAR expresion .)
    SUMA            shift and go to state 41
    RESTA           shift and go to state 42


state 33

    (18) expresion -> termino .
    (19) termino -> termino . MULT factor
    (20) termino -> termino . DIV factor

    SUMA            reduce using rule 18 (expresion -> termino .)
    RESTA           reduce using rule 18 (expresion -> termino .)
    PUNTOCOMA       reduce using rule 18 (expresion -> termino .)
    RPAR            reduce using rule 18 (expresion -> termino .)
    MULT            shift and go to state 43
    DIV             shift and go to state 44


state 34

    (21) termino -> factor .

    MULT            reduce using rule 21 (termino -> factor .)
    DIV             reduce using rule 21 (termino -> factor .)
    SUMA            reduce using rule 21 (termino -> factor .)
    RESTA           reduce using rule 21 (termino -> factor .)
    PUNTOCOMA       reduce using rule 21 (termino -> factor .)
    RPAR            reduce using rule 21 (termino -> factor .)


state 35

    (22) factor -> ENTERO .

    MULT            reduce using rule 22 (factor -> ENTERO .)
    DIV             reduce using rule 22 (factor -> ENTERO .)
    SUMA            reduce using rule 22 (factor -> ENTERO .)
    RESTA           reduce using rule 22 (factor -> ENTERO .)
    PUNTOCOMA       reduce using rule 22 (factor -> ENTERO .)
    RPAR            reduce using rule 22 (factor -> ENTERO .)


state 36

    (24) factor -> LPAR . expresion RPAR
    (16) expresion -> . expresion SUMA termino
    (17) expresion -> . expresion RESTA termino
    (18) expresion -> . termino
    (19) termino -> . termino MULT factor
    (20) termino -> . termino DIV factor
    (21) termino -> . factor
    (22) factor -> . ENTERO
    (23) factor -> . VARIABLE
    (24) factor -> . LPAR expresion RPAR
    (25) factor -> . CADENA

    ENTERO          shift and go to state 35
    VARIABLE        shift and go to state 31
    LPAR            shift and go to state 36
    CADENA          shift and go to state 37

    expresion                      shift and go to state 45
    termino                        shift and go to state 33
    factor                         shift and go to state 34

state 37

    (25) factor -> CADENA .

    MULT            reduce using rule 25 (factor -> CADENA .)
    DIV             reduce using rule 25 (factor -> CADENA .)
    SUMA            reduce using rule 25 (factor -> CADENA .)
    RESTA           reduce using rule 25 (factor -> CADENA .)
    PUNTOCOMA       reduce using rule 25 (factor -> CADENA .)
    RPAR            reduce using rule 25 (factor -> CADENA .)


state 38

    (14) escritura -> PRINTF LPAR CADENA . RPAR
    (15) escritura -> PRINTF LPAR CADENA . COMA VARIABLE RPAR

    RPAR            shift and go to state 46
    COMA            shift and go to state 47


state 39

    (1) programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR END PUNTOCOMA .

    $end            reduce using rule 1 (programa -> PROGRAMA IDENTIFICADOR LPAR RPAR LCOR cuerpo RCOR END PUNTOCOMA .)


state 40

    (11) lista_identificadores -> lista_identificadores COMA IDENTIFICADOR .

    PUNTOCOMA       reduce using rule 11 (lista_identificadores -> lista_identificadores COMA IDENTIFICADOR .)
    COMA            reduce using rule 11 (lista_identificadores -> lista_identificadores COMA IDENTIFICADOR .)


state 41

    (16) expresion -> expresion SUMA . termino
    (19) termino -> . termino MULT factor
    (20) termino -> . termino DIV factor
    (21) termino -> . factor
    (22) factor -> . ENTERO
    (23) factor -> . VARIABLE
    (24) factor -> . LPAR expresion RPAR
    (25) factor -> . CADENA

    ENTERO          shift and go to state 35
    VARIABLE        shift and go to state 31
    LPAR            shift and go to state 36
    CADENA          shift and go to state 37

    termino                        shift and go to state 48
    factor                         shift and go to state 34

state 42

    (17) expresion -> expresion RESTA . termino
    (19) termino -> . termino MULT factor
    (20) termino -> . termino DIV factor
    (21) termino -> . factor
    (22) factor -> . ENTERO
    (23) factor -> . VARIABLE
    (24) factor -> . LPAR expresion RPAR
    (25) factor -> . CADENA

    ENTERO          shift and go to state 35
    VARIABLE        shift and go to state 31
    LPAR            shift and go to state 36
    CADENA          shift and go to state 37

    termino                        shift and go to state 49
    factor                         shift and go to state 34

state 43

    (19) termino -> termino MULT . factor
    (22) factor -> . ENTERO
    (23) factor -> . VARIABLE
    (24) factor -> . LPAR expresion RPAR
    (25) factor -> . CADENA

    ENTERO          shift and go to state 35
    VARIABLE        shift and go to state 31
    LPAR            shift and go to state 36
    CADENA          shift and go to state 37

    factor                         shift and go to state 50

state 44

    (20) termino -> termino DIV . factor
    (22) factor -> . ENTERO
    (23) factor -> . VARIABLE
    (24) factor -> . LPAR expresion RPAR
    (25) factor -> . CADENA

    ENTERO          shift and go to state 35
    VARIABLE        shift and go to state 31
    LPAR            shift and go to state 36
    CADENA          shift and go to state 37

    factor                         shift and go to state 51

state 45

    (24) factor -> LPAR expresion . RPAR
    (16) expresion -> expresion . SUMA termino
    (17) expresion -> expresion . RESTA termino

    RPAR            shift and go to state 52
    SUMA            shift and go to state 41
    RESTA           shift and go to state 42


state 46

    (14) escritura -> PRINTF LPAR CADENA RPAR .

    PUNTOCOMA       reduce using rule 14 (escritura -> PRINTF LPAR CADENA RPAR .)


state 47

    (15) escritura -> PRINTF LPAR CADENA COMA . VARIABLE RPAR

    VARIABLE        shift and go to state 53


state 48

    (16) expresion -> expresion SUMA termino .
    (19) termino -> termino . MULT factor
    (20) termino -> termino . DIV factor

    SUMA            reduce using rule 16 (expresion -> expresion SUMA termino .)
    RESTA           reduce using rule 16 (expresion -> expresion SUMA termino .)
    PUNTOCOMA       reduce using rule 16 (expresion -> expresion SUMA termino .)
    RPAR            reduce using rule 16 (expresion -> expresion SUMA termino .)
    MULT            shift and go to state 43
    DIV             shift and go to state 44


state 49

    (17) expresion -> expresion RESTA termino .
    (19) termino -> termino . MULT factor
    (20) termino -> termino . DIV factor

    SUMA            reduce using rule 17 (expresion -> expresion RESTA termino .)
    RESTA           reduce using rule 17 (expresion -> expresion RESTA termino .)
    PUNTOCOMA       reduce using rule 17 (expresion -> expresion RESTA termino .)
    RPAR            reduce using rule 17 (expresion -> expresion RESTA termino .)
    MULT            shift and go to state 43
    DIV             shift and go to state 44


state 50

    (19) termino -> termino MULT factor .

    MULT            reduce using rule 19 (termino -> termino MULT factor .)
    DIV             reduce using rule 19 (termino -> termino MULT factor .)
    SUMA            reduce using rule 19 (termino -> termino MULT factor .)
    RESTA           reduce using rule 19 (termino -> termino MULT factor .)
    PUNTOCOMA       reduce using rule 19 (termino -> termino MULT factor .)
    RPAR            reduce using rule 19 (termino -> termino MULT factor .)


state 51

    (20) termino -> termino DIV factor .

    MULT            reduce using rule 20 (termino -> termino DIV factor .)
    DIV             reduce using rule 20 (termino -> termino DIV factor .)
    SUMA            reduce using rule 20 (termino -> termino DIV factor .)
    RESTA           reduce using rule 20 (termino -> termino DIV factor .)
    PUNTOCOMA       reduce using rule 20 (termino -> termino DIV factor .)
    RPAR            reduce using rule 20 (termino -> termino DIV factor .)


state 52

    (24) factor -> LPAR expresion RPAR .

    MULT            reduce using rule 24 (factor -> LPAR expresion RPAR .)
    DIV             reduce using rule 24 (factor -> LPAR expresion RPAR .)
    SUMA            reduce using rule 24 (factor -> LPAR expresion RPAR .)
    RESTA           reduce using rule 24 (factor -> LPAR expresion RPAR .)
    PUNTOCOMA       reduce using rule 24 (factor -> LPAR expresion RPAR .)
    RPAR            reduce using rule 24 (factor -> LPAR expresion RPAR .)


state 53

    (15) escritura -> PRINTF LPAR CADENA COMA VARIABLE . RPAR

    RPAR            shift and go to state 54


state 54

    (15) escritura -> PRINTF LPAR CADENA COMA VARIABLE RPAR .

    PUNTOCOMA       reduce using rule 15 (escritura -> PRINTF LPAR CADENA COMA VARIABLE RPAR .)

